Added Docker images description

--- a/.github/workflows/docker_push_build.yml
+++ b/.github/workflows/docker_push_build.yml
@@ -25,3 +25,8 @@ jobs:
           tags: |
             rajendrayadav/grpcserver:${{ github.sha }} 
             rajendrayadav/grpcserver:latest
+      - name: Update Docker Hub overview
+        uses: christian-korneck/dockerhub-description@v4
+        with:
+          repository: rajendrakumaryadav/grpcserver
+          readme_file: README.md
