--- a/.github/workflows/dockerhub-overview.yml
+++ b/.github/workflows/dockerhub-overview.yml
@@ -16,6 +16,6 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
-        repository: rajendrayadav/webserver
+        repository: rajendrayadav/grpcserver
         short-description: ${{ github.event.repository.description }}
         enable-url-completion: true
